--- a/Tweepy_apiv2.ipynb
+++ b/Tweepy_apiv2.ipynb
@@ -63,7 +63,7 @@
       },
       "source": [
         "#Verificando as versões\n",
-        "É importante verificar a versão utilizar pois é possíveil que ocorra erros ao usar algumas funcionalidades. No meu caso foi necessário fazer um update do tweepy, pois estava ocorrendo um erro na classe Cliente que utilizaremos logo em seguida."
+        "É importante verificar a versão que esta sendo executada pois é possível que ocorram erros ao usar algumas funcionalidades. No meu caso foi necessário fazer um update do tweepy, pois estava ocorrendo um erro na classe Cliente que utilizaremos logo em seguida."
       ]
     },
     {
