--- a/Tweepy_apiv2.ipynb
+++ b/Tweepy_apiv2.ipynb
@@ -63,7 +63,7 @@
       },
       "source": [
         "#Verificando as versões\n",
-        "É importante verificar a versão que esta sendo executada pois é possível que ocorram erros ao usar algumas funcionalidades. No meu caso foi necessário fazer um update do tweepy, pois estava ocorrendo um erro na classe Cliente que utilizaremos logo em seguida."
+        "É importante verificar a versão que esta sendo executada pois é possível que ocorram erros ao usar algumas funcionalidades. No meu caso foi necessário fazer um update do tweepy, pois estava ocorrendo um erro na classe 'Cliente' que utilizaremos logo em seguida."
       ]
     },
     {
@@ -109,7 +109,7 @@
       },
       "source": [
         "#Utilizando as chaves de acesso\n",
-        "Na API V1 é necessário fazer a autenticação do usuário utilizando as chaves de acesso para que ocorra a conexão com o servidor do Twitter. E na API 2.0 não é diferente. Como se tratam de dados sensíveis, uma das maneiras de que podemos utilizar as chaves e manter a privacidade é abrindo um arquivo .txt utilizando a função 'open()'. Nesse arquivo estão contidas todas as chaves e o Python fara a leitura desses dados, sem expô-los. "
+        "Na API V1 é necessário fazer a autenticação do usuário utilizando as chaves de acesso para que ocorra a conexão com o servidor do Twitter. E na API 2.0 não é diferente. Como se tratam de dados sensíveis, uma das maneiras que podemos utilizar as chaves e manter a privacidade é abrindo um arquivo .txt utilizando a função 'open()'. Nesse arquivo estão contidas todas as chaves e o Python fara a leitura desses dados, sem expô-los. "
       ]
     },
     {
@@ -134,7 +134,7 @@
         "id": "3NMeqieEouHT"
       },
       "source": [
-        "Na versão da API V2 a classe 'tweepy.Client' funciona de maneira semelhante a 'tweepy.API' da API 1.0 e por aquela fazemos a autenticação atribuindo a variável 'client'."
+        "Na versão da API V2 a classe 'tweepy.Client' funciona de maneira semelhante a 'tweepy.API' da API V1."
       ]
     },
     {
